# tokenscape

./: .gitignore  LICENSE  README.md  claude-report.html  codex-report.html  pyproject.toml  report.html  token-burn-repor2t.md  token-burn-report.md  token-burn-report2.md
.github/workflows/: add-to-project.yml  ci.yml  publish.yml
src/hindsight/: bundle.py  cli.py  codex_parser.py  config.py  dashboard.py  html_report.py  parser.py  report.py  semantic.py  types.py
src/token_burn/: aggregate.py  bundle.py  classifier.py  cli.py  config.py  dashboard.py  export.py  html_report.py  models.py  parser.py  patterns.py  report.py  semantic.py  types.py
src/tokenscape/: bundle.py  classifier.py  cli.py  codex_parser.py  config.py  dashboard.py  export.py  format.py  html_report.py  parser.py  patterns.py  report.py  semantic.py
tests/: test_aggregate.py  test_classifier.py  test_codex_parser.py  test_parser.py  test_patterns.py
tests/fixtures/: sample-codex-session.jsonl  sample-session.jsonl
