[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hindsight"
version = "0.3.1"
description = "AI token usage CLI and TUI (Claude Code + Codex)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "textual>=0.61",
    "rich>=13",
]

[project.optional-dependencies]
semantic = [
    "fastembed>=0.3",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[project.scripts]
hindsight = "hindsight.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/hindsight"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
