[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenscape"
version = "0.3.1"
description = "AI token usage CLI and TUI (Claude Code + Codex)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "textual>=0.61",
    "rich>=13",
]

[project.optional-dependencies]
semantic = [
    "fastembed>=0.3",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[project.scripts]
tokenscape = "tokenscape.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenscape"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# long lines are idiomatic here (Rich/typer help text, HTML/CSS template strings)
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
